--- a/index.html
+++ b/index.html
@@ -1,13 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pagina</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="menu">
+          <a href="#" class="logo">Logo</a>
+          <input type="checkbox" id="menu" />
+          <label for="menu">
+            <img src="images/menu.png" alt="" class="menu-icono" />
+          </label>
+          <nav class="navbar">
+            <ul>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Servicio</a></li>
+              <li><a href="#">Productos</a></li>
+              <li><a href="#">Contactos</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header-content">
+          <div class="header-txt">
+            <span>el mejor sitio</span>
+            <h1>Compra lo que necesitas <br />lugar favorito</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+              repellendus doloremque voluptatum. Sapiente error dicta et amet
+              provident maxime harum quis, temporibus perspiciatis fugit
+              laboriosam ad, voluptatibus explicabo magni asperiores?
+            </p>
+            <a href="#" class="btn">Informacion</a>
+          </div>
+          <div class="header-img"><img src="images/right.png" alt="" /></div>
+        </div>
+      </div>
+    </header>
+    <section class="brands container">
+      <div class="brands-1">
+        <p>Nuestros partenrs <br />marcas</p>
+      </div>
+      <div class="brands-1"><img src="images/brands1.png" alt="" /></div>
+      <div class="brands-1"><img src="images/brands2.png" alt="" /></div>
+      <div class="brands-1"><img src="images/brands3.png" alt="" /></div>
+    </section>
+    <main class="services container">
+      <h2>Nuestros Servicios</h2>
+      <div class="services-1">
+        <img src="images/i1.svg" alt="" />
+        <h3>Servicio lorem</h3>
+      </div>
+      <div class="services-1">
+        <img src="images/i2.svg" alt="" />
+        <h3>Servicio lorem</h3>
+      </div>      <div class="services-1">
+        <img src="images/i3.svg" alt="" />
+        <h3>Servicio lorem</h3>
+      </div>      <div class="services-1">
+        <img src="images/i4.svg" alt="" />
+        <h3>Servicio lorem</h3>
+      </div>
+      <div class="services-1">
+        <img src="images/i5.svg" alt="" />
+        <h3>Servicio lorem</h3>
+      </div>
+    </main>
+    <section class="information container">
+        <div class="information-ima"><img src="images/grafic.png" alt=""></div>
+        <div class="information-txt">
+            <h2>La informacion en tiempo real</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quisquam explicabo eum animi, illo molestias quia, voluptates mollitia veniam quod cum, sequi voluptatibus! Itaque, non error aliquam iusto eius consequuntur.</p>
+            <a href="" class="btn-1">informacion</a>
+        </div>
+    </section>
+    <section class="about">
+        <div class="about-content container">
+            <div class="about-txt">
+                <h2>nosotros somos un equipo para apoyarte</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus cum enim explicabo animi, consequuntur eligendi error minus provident, facere sapiente deleniti esse praesentium officiis dolores quo ratione quisquam laboriosam tempore?</p>
+                <a href="#" class="btn-1">Informacion</a>
+            </div>
+            <div class="about-txt"><img src="images/about.png" alt=""></div>
+        </div>
+    </section>
+  </body>
 </html>
