--- a/index.html
+++ b/index.html
@@ -87,5 +87,38 @@
             <div class="about-txt"><img src="images/about.png" alt=""></div>
         </div>
     </section>
+    <section class="contact container">
+        <h2>Contactos</h2>
+        <form action=""><input type="email" placeholder="Correo"><a href="#" class="btn-1">Informacion</a></form>
+    </section>
+    <footer class="footer">
+        <div class="footer-content- ontainer">
+            <div class="link">
+                <ul>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <ul>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <ul>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </footer>
   </body>
 </html>
