--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               provident maxime harum quis, temporibus perspiciatis fugit
               laboriosam ad, voluptatibus explicabo magni asperiores?
             </p>
-            <a href="#" class="btn">Informacion</a>
+            <a href="#" class="btn-1">Informacion</a>
           </div>
           <div class="header-img"><img src="images/right.png" alt="" /></div>
         </div>
