--- a/index.html
+++ b/index.html
@@ -50,27 +50,31 @@
     </section>
     <main class="services container">
       <h2>Nuestros Servicios</h2>
-      <div class="services-1">
-        <img src="images/i1.svg" alt="" />
-        <h3>Servicio lorem</h3>
+      <div class="services-content">
+        <div class="services-1">
+          <img src="images/i1.svg" alt="" />
+          <h3>Servicio lorem</h3>
+        </div>
+        <div class="services-1">
+          <img src="images/i2.svg" alt="" />
+          <h3>Servicio lorem</h3>
+        </div>      <div class="services-1">
+          <img src="images/i3.svg" alt="" />
+          <h3>Servicio lorem</h3>
+        </div>      <div class="services-1">
+          <img src="images/i4.svg" alt="" />
+          <h3>Servicio lorem</h3>
+        </div>
+        <div class="services-1">
+          <img src="images/i5.svg" alt="" />
+          <h3>Servicio lorem</h3>
+        </div>
+
       </div>
-      <div class="services-1">
-        <img src="images/i2.svg" alt="" />
-        <h3>Servicio lorem</h3>
-      </div>      <div class="services-1">
-        <img src="images/i3.svg" alt="" />
-        <h3>Servicio lorem</h3>
-      </div>      <div class="services-1">
-        <img src="images/i4.svg" alt="" />
-        <h3>Servicio lorem</h3>
-      </div>
-      <div class="services-1">
-        <img src="images/i5.svg" alt="" />
-        <h3>Servicio lorem</h3>
-      </div>
+     
     </main>
     <section class="information container">
-        <div class="information-ima"><img src="images/grafic.png" alt=""></div>
+        <div class="information-img"><img src="images/grafic.png" alt=""></div>
         <div class="information-txt">
             <h2>La informacion en tiempo real</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quisquam explicabo eum animi, illo molestias quia, voluptates mollitia veniam quod cum, sequi voluptatibus! Itaque, non error aliquam iusto eius consequuntur.</p>
@@ -84,7 +88,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus cum enim explicabo animi, consequuntur eligendi error minus provident, facere sapiente deleniti esse praesentium officiis dolores quo ratione quisquam laboriosam tempore?</p>
                 <a href="#" class="btn-1">Informacion</a>
             </div>
-            <div class="about-txt"><img src="images/about.png" alt=""></div>
+            <div class="about-img"><img src="images/about.png" alt=""></div>
         </div>
     </section>
     <section class="contact container">
@@ -92,7 +96,7 @@
         <form action=""><input type="email" placeholder="Correo"><a href="#" class="btn-1">Informacion</a></form>
     </section>
     <footer class="footer">
-        <div class="footer-content- ontainer">
+        <div class="footer-content container">
             <div class="link">
                 <ul>
                     <li><a href="#">lorem</a></li>
